# ga-multi-mcp

./: .env.example  .gitignore  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/ga_multi_mcp/: __init__.py  __main__.py  config.py  date_parser.py  ga_client.py  property_resolver.py  server.py
