[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga-multi-mcp"
version = "0.1.0"
description = "MCP server for querying Google Analytics 4 across multiple properties"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Hey Good Game", email = "dev@hey.gg" }
]
keywords = [
    "mcp",
    "google-analytics",
    "ga4",
    "analytics",
    "llm",
    "ai",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "google-analytics-data>=0.18.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.130.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/heygoodgame/ga-multi-mcp"
Repository = "https://github.com/heygoodgame/ga-multi-mcp"
Documentation = "https://github.com/heygoodgame/ga-multi-mcp#readme"

[project.scripts]
ga-multi-mcp = "ga_multi_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ga_multi_mcp"]

# =============================================================================
# uv configuration
# =============================================================================
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

# =============================================================================
# Ruff (linting/formatting)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
